# lagoon-randomizer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-native.sh  build-wasm.sh  main.cpp  randomizer.hpp  web.cpp
cmake/: Emscripten.cmake
reverse-engineering-docs/: README.md  camera-fix.md  debug-mode-and-versions.md  game-data-tables.md  graphics-loading.md  map-decompressor.md  object-update-loop.md  player-stats.md  ram-map.md  rom-map.md  screen-fade.md  sword-attack.md  text-encoding.md  town-movement.md
web/: index.html  nginx-lagoon.conf.example
